--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <input type="text" id="userInput" disabled />
             <div id="feedback"></div>
         <div id="scoreBoard">
-            <p>Korrekt / правильно: <span id="correctCount">0</span></p>
-            <p>Falsch / неправильный: <span id="incorrectCount">0</span></p>
+            <p id="correctLabel">Correct: <span id="correctCount">0</span></p>
+            <p id="incorrectLabel">Wrong: <span id="incorrectCount">0</span></p>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
