feat: add modal

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             <button id="toggleLayout" title="Select the keyboard Layout which you are currently typing on" disabled >Choose your layout</button>
         </div>
         <div>
-            <button class="game-button" id="oneMinuteMode">1 min. mode</button>
-            <button class="game-button" id="freeplayMode">Freeplay mode</button>
-            <button class="game-button" id="freeplayMode2">Custom mode</button>
+            <button class="game-button" id="oneMinuteMode">60 Seconds</button>
+            <button class="game-button" id="freeplayMode">Freeplay</button>
+            <button class="game-button" id="freeplayMode2">Custom</button>
             <div id="timer" class="timer">
                 01:00
             </div>                
@@ -49,6 +49,14 @@
             </p>
         </div>
     </div>
+    <div id="myModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>Zeit abgelaufen!</h2>
+            <p>Die Zeit für diese Runde ist vorbei.</p>
+        </div>
+    </div>
+    
 </div>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="script.js"></script>
