feat: add keyboard support

--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
                 <span id="incorrectLabel">Correct:</span> 
                 <span id="incorrectCount">0</span>
             </p>
+            <button id="toggleImageContainer">Toggle Image Container</button>
         </div>
     </div>
+    
     <div id="myModal" class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
@@ -62,6 +64,9 @@
         </div>
     </div>
     
+</div>
+<div id="imageContainer" class="hidden">
+    <img id="myImage" src="src/KB_Russian.png" alt="Beschreibung des Bildes">
 </div>
     <script src="script.js"></script>
 </body>
